# svpgm2txt

./: AUTHORS.txt  CMakeLists.txt  ChangeLog.txt  DEPENDENCIES.txt  README.txt
dev-scripts/: update_version_number.sh
manpages/: CMakeLists.txt  svpgm2txt.1
packaging/: README.txt
packaging/fedora/: svpgm2txt.spec
packaging/gentoo/app-text/svpgm2txt/: svpgm2txt-1.0.ebuild  svpgm2txt-1.1.ebuild  svpgm2txt-1.2.ebuild
packaging/ubuntu/: changelog  control  copyright
src/: CMakeLists.txt  chaine.cpp  chaine.h  image.cpp  image.h  main.cpp  pgmHeader.cpp  pgmHeader.h  svChar.cpp  svChar.h  svCharDb.cpp  svCharDb.h  svExtractedChar.cpp  svExtractedChar.h  svFont.h  svHeuristique.cpp  svHeuristique.h  svHeuristiqueInternalDb.cpp  svLine.cpp  svLine.h  svOCR.cpp  svOCR.h  svOCRChar.cpp  svOCRChar.h  svOCRCharDb.cpp  svOCRCharDb.h  svOCRExtractedChar.cpp  svOCRExtractedChar.h  svOCRGlobalConfig.h  svOCRHeuristic.cpp  svOCRHeuristic.h  svOCRILFixerBase.cpp  svOCRILFixerBase.h  svOCRILSimpleFixer.cpp  svOCRILSimpleFixer.h  svOCRILSpellFixer.cpp  svOCRILSpellFixer.h  svOCRILUpperCaseFixer.cpp  svOCRILUpperCaseFixer.h  svOCRImage.cpp  (+9 more)
test/: CMakeLists.txt  data-db.txt  no-db-user-entry.txt  test-data-ascii.pgm  test-data-ascii.pgm.txt  test-data-ascii.pgm.txt.md5sum  test-data-bin.pgm  test-data-bin.pgm.txt  test-data-bin.pgm.txt.md5sum  test-data.xcf  test-ocr-no-db.sh  test-ocr-with-db.sh
